# s1swotcolocs

./: .gitignore  Dockerfile  README.md  README.rst  pyproject.toml  release-docker.bash
.github/workflows/: docker-release.yml
ci/requirements/: environment.yaml
docs/: api.rst  conf.py  index.rst
docs/notebooks/: illustration_seastate_coloc.ipynb
src/s1swotcolocs/: __init__.py  coloc_SWOT_L3_with_S1_CDSE_TOPS.pbs  coloc_SWOT_L3_with_S1_CDSE_TOPS.py  coloc_SWOT_L3_with_S1_CDSE_TOPS_prun.py  coloc_SWOT_L3_with_S1_CDSE_TOPS_sequential_wrapper.py  coloc_SWOT_L3_with_S1_CDSE_TOPS_sequentiel.py  config.yml  illustrate_coloc_swh_file.py  illustrate_coloc_swh_file_pyplot.py  pickup_best_swot_file.py  seastate_colocs_s1_swot.py  seastate_colocs_s1_swot_sequential.py  seastate_colocs_s1_swot_sequential_wrapper.py  utils.py
src/s1swotcolocs/assests/: SWOT_L3_LR_SSH_Expert_026_165_20241229T165806_20241229T174933_v2.0.1.nc
src/s1swotcolocs/assets/: seastate_coloc_S1A_IW_SLC__1SDV_20240729T172527_20240729T172557_054978_06B28F_CEF7-iw3_SWOT_L3_Sentinel-1_IW_20240729T172147.nc
src/s1swotcolocs/docker_stuff/: Dockerfile  environment.yml  readme
tests/: test_get_swot_geoloc.py  test_pickup_best_swot_file.py  test_s1swotcolocs.py  test_seastate_coloc_s1_swot.py  test_utils_methods.py
