[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "s1swotcolocs"
version = "2025.6.13"
description = "Python lib to create co-locations between Sentinel-1 IW or EW images and SWOT KaRin swath."
readme = "README.rst"
authors = [
  {name = "Antoine Grouazel", email = "antoine.grouazel@ifremer.fr"}
]
maintainers = [
  {name = "Antoine Grouazel", email = "antoine.grouazel@ifremer.fr"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
    "numpy",
    "pandas",
    "xarray",
    "antimeridian",
    "shapely",
    "tqdm",
    "geopandas",
    "geodatasets",
    "cdsodatacli",
    "h5netcdf"  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/agrouaze/s1swotcolocs/issues"
changelog = "https://github.com/agrouaze/s1swotcolocs/blob/master/changelog.md"
homepage = "https://github.com/agrouaze/s1swotcolocs"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

